# bvc-gestor

./: .env.example  .gitignore  LICENSE  README.md  makefile  mi_estructura.txt  pyproject.toml  requirements.txt  run.py  structure.txt  test_backend_flow.py
data/config/: app_config.json
data/database/: bvc_gestor.db-shm  bvc_gestor.db-wal
docs/: guia.md  plan_completo_operaciones.md
docs/desarrollo/: Insercion SQL.txt  activos.csv  bancos.csv  casas_cambio_venezuela.csv  entidades_bursatiles_ven.csv
scripts/: diagnose_styles.py  init_db.py  migrate_styles.py  seed_activos.py  seed_clientes.py  style_analysis_report.txt  test_clientes.py  test_style_manager.py  validate_styles.py
src/: test_clientes.py
src/bvc_gestor/: main.py
src/bvc_gestor/controllers/: clientes_controller.py  operaciones_controller.py
src/bvc_gestor/core/: app_state.py  error_handler.py
src/bvc_gestor/data/: activos.csv  casas_bolsa.csv  titulos.csv
src/bvc_gestor/database/: engine.py  models_sql copy.py  models_sql.py  repositories.py
src/bvc_gestor/models/: Activo.py  __init__.py  cliente.py  orden.py
src/bvc_gestor/repositories/: base_repository.py  orden_repository.py  portafolio_repository.py  saldo_repository.py
src/bvc_gestor/services/: operaciones_service.py  orden_service.py  portfolio_service.py
src/bvc_gestor/tests/: test.py  test_operaciones_module.py
src/bvc_gestor/ui/: __init__.py  main_window.py  sidebar.py  statusbar.py  topbar.py
src/bvc_gestor/utils/: calculos_financieros.py  constants.py  data_initializer.py  formatters.py  logger.py  (+1 more)
(+60 files in other folders)
