
[project]

name = "PYME"

version = "1.0"

description = "Gestor de Compra-venta en la Bolsa de Valores "

authors = [

    {name = "Yampierh", email = "yampiersantiago@gmail.com"}

]

readme = "README.md"

requires-python = ">=3.8"

dependencies = [

    "PyQt6>=6.5.0",

    "SQLAlchemy>=2.0.23",

    "pandas>=2.0.3",

]



[project.optional-dependencies]

dev = [

    "pytest>=7.4.0",

    "black>=23.7.0",

    "flake8>=6.1.0",

    "pre-commit>=3.3.3",

]



[build-system]

requires = ["setuptools>=61.0"]

build-backend = "setuptools.build_meta"



[tool.black]

line-length = 88

target-version = ['py38']



[tool.isort]

profile = "black"

line_length = 88



[tool.mypy]

python_version = "3.8"

warn_return_any = true

warn_unused_configs = true

